--- a/build.gradle
+++ b/build.gradle
@@ -6,21 +6,13 @@ plugins {
 }
 
 group = 'dev.neuralnexus'
-version = '1.3.0'
+version = '1.3.0-Fabric-1.19.2'
 
 repositories {
     mavenCentral()
     maven {
-        name = "spigotmc-repo"
-        url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"
-    }
-    maven {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
-    }
-    maven {
-        name = "papermc-repo"
-        url = "https://repo.papermc.io/repository/maven-public/"
     }
 }
 
@@ -31,19 +23,12 @@ dependencies {
     // Spark
     compileOnly 'me.lucko:spark-api:0.1-SNAPSHOT'
 
-    // Spigot
-    compileOnly "org.spigotmc:spigot-api:1.19.4-R0.1-SNAPSHOT"
-
-    // BungeeCord
-    compileOnly "net.md-5:bungeecord-api:1.19-R0.1-SNAPSHOT"
-
     // Fabric
-    // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-    // Fabric API. This is technically optional, but you probably want it anyway.
+    // Fabric API
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 }
 
@@ -66,11 +51,8 @@ java {
     }
 
     // Fabric
-    archivesBaseName = project.archives_base_name
-    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-    // if it is present.
-    // If you remove this line, sources will not be generated.
-    withSourcesJar()
+//    archivesBaseName = project.archives_base_name + "-${version}" +"-${project.minecraft_version}"
+//    withSourcesJar()
 }
 java.disableAutoTargetJvm()
 
@@ -84,14 +66,6 @@ processResources {
     def props = [version: version]
     inputs.properties props
     filteringCharset 'UTF-8'
-    filesMatching('plugin.yml') {
-        expand props
-    }
-
-    // BungeeCord
-    filesMatching('bungee.yml') {
-        expand props
-    }
 
     // Fabric
     inputs.property "version", project.version
